# oiml_cpp

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: CLANG-MacOS-UBSan.yml  CLANG-MacOS-XCode.yml  CLANG-MacOS.yml  CLANG-Ubuntu-UBSan.yml  CLANG-Ubuntu.yml  GCC-Ubuntu.yml  MSVC-Windows.yml
include/oiml/: Index.hpp  config.hpp
include/oiml/common/: allocator.hpp  array.hpp  common.hpp  config.hpp  file_loader.hpp  iterator.hpp
include/oiml/oiml_cpu/: arm.hpp  avx.hpp  common.hpp  cpu_quants.hpp  detect_isa.hpp  impl.hpp  util_functions.hpp
tests/: CMakeLists.txt  test_main.cpp
